--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_parent"
@@ -8,7 +9,7 @@
     tools:context=".postActivity.UserGeneralPresentation">
 
 
-    <android.support.v7.widget.Toolbar
+   <!-- <android.support.v7.widget.Toolbar
         android:id="@+id/general_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,27 +19,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@color/black"
-        />
+        /> -->
 
 
     <ScrollView
-        app:layout_constraintTop_toBottomOf="@+id/general_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <!-- app:layout_constraintTop_toBottomOf="@+id/general_toolbar"-->
+        >
+
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                >
+                app:layout_constraintStart_toStartOf="parent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:id="@+id/general_user_name"
                         android:layout_width="wrap_content"
@@ -56,13 +64,18 @@
                         android:id="@+id/generalImageProfilUser"
                         android:layout_width="@dimen/new_profil_image_dimen"
                         android:layout_height="@dimen/new_profil_image_dimen"
-                        android:layout_marginStart="@dimen/new_profil_margin_start"
-                        android:layout_marginTop="@dimen/margin_top_new_profil_design"
-                        android:layout_marginEnd="@dimen/new_profil_margin_end"
-                        android:src="@drawable/boy"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+                    <!-- android:layout_marginTop="@dimen/margin_top_new_profil_design" -->
+                    android:layout_marginEnd="@dimen/new_profil_margin_end"
+                    android:src="@drawable/boy"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                     <ProgressBar
                         android:id="@+id/user_general_progress"
@@ -70,6 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
+                        android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="@+id/generalImageProfilUser"
                         app:layout_constraintEnd_toEndOf="@+id/generalImageProfilUser"
                         app:layout_constraintStart_toStartOf="@+id/generalImageProfilUser"
@@ -82,8 +96,8 @@
                         android:layout_marginTop="@dimen/new_profil_margin_top"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textStyle="bold"
                         android:textSize="@dimen/new_profil_text_size"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/general_user_name"
                         app:layout_constraintStart_toStartOf="@+id/general_user_name"
                         app:layout_constraintTop_toBottomOf="@+id/general_user_name" />
@@ -206,14 +220,25 @@
                         android:layout_marginStart="@dimen/new_profil_button"
                         android:layout_marginTop="@dimen/new_profil_button_margin_top"
                         android:layout_marginEnd="@dimen/new_profil_button"
+                        android:layout_marginBottom="32dp"
+                        android:background="@drawable/main_background"
                         android:text="contacter"
+                        android:textAllCaps="false"
+                        android:textColor="@color/blanc"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/general_voir_ventes"
-                        android:textAllCaps="false"
-                        android:background="@drawable/main_background"
-                        android:textColor="@color/blanc"
-                        />
+                        app:layout_constraintTop_toBottomOf="@+id/general_voir_ventes" />
+
+                    <ImageView
+                        android:id="@+id/close_bottom_sheet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_close_bottom_sheet" />
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
         </android.support.constraint.ConstraintLayout>
