--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -159,6 +159,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
+        app:cardBackgroundColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="@dimen/message_activity_height_image"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/message_activity_text_start"
                 android:layout_marginTop="@dimen/message_image_top"
-                android:textColor="@color/black"
+                android:textColor="@color/blanc"
                 android:textStyle="bold"
                 android:lines="1"
                 android:ellipsize="end"
@@ -205,7 +206,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:alpha="0.2"
+                android:alpha="0.4"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
