--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -64,11 +64,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:popupTheme="@style/ToolbarTheme_two"
+        android:id="@+id/toolbar_search"
+        app:popupTheme="@style/ToolbarTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
