--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -68,8 +68,10 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_search"
+        android:backgroundTint="@color/blanc"
         app:popupTheme="@style/ToolbarTheme"
         android:layout_width="0dp"
+        app:titleTextColor="@color/black"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -77,5 +79,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/search_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/commentaire_circle_widht_height"
+        android:layout_height="@dimen/commentaire_circle_widht_height"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:theme="@style/progress_theme"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/search_recyclerview" />
 
 </android.support.constraint.ConstraintLayout>
