--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     </style>
 
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/pacifico</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
