--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -116,13 +116,14 @@
                 <ProgressBar
                     android:id="@+id/content_progresbar"
                     style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/commentaire_circle_widht_height"
+                    android:layout_height="@dimen/commentaire_circle_widht_height"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:visibility="visible"
+                    android:theme="@style/progress_theme"
                     app:layout_constraintBottom_toBottomOf="@+id/viewFlipper"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
