--- a/CommunityMarket/app/src/main/res/menu/detail_menu.xml
+++ b/CommunityMarket/app/src/main/res/menu/detail_menu.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/ic_like"
         android:icon="@drawable/ic_like"
         android:title="ajouter aux favoris"
+        app:showAsAction="always"
         />
 
     <item
         android:id="@+id/ic_call"
         android:icon="@drawable/ic_phone_black_24dp"
-        android:title="ajouter aux favoris"
+        android:title="appeler"
+        app:showAsAction="always"
+
         />
 
 </menu>
