--- a/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
@@ -7,17 +7,34 @@
     tools:context=".search.ChoiceSearchActivity"
     android:background="@color/black">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="@dimen/text_choice_widht"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/righteous"
+        android:text="what do you want to search ?"
+        android:textAlignment="center"
+        android:textColor="@color/blanc"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_utilisateur"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/new_button_add_button_end"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="@dimen/new_button_add_button_end"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/textView8">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -55,7 +72,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/righteous"
-                android:text="utilisateur"
+                android:text="users "
                 android:textColor="@color/blanc"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -71,9 +88,9 @@
         android:id="@+id/card_article"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/new_button_add_button_end"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/new_button_add_button_end"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +132,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/righteous"
-                android:text="un article "
+                android:text="an article "
                 android:textColor="@color/blanc"
                 android:textSize="24sp"
                 android:textStyle="bold"
