--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -209,6 +209,25 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/voir_les_commentaire_btn" />
 
+                <Button
+                    android:id="@+id/is_master_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/main_background"
+                    android:text="supprimer le post"
+                    android:textAllCaps="false"
+                    android:textColor="@color/blanc"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_description" />
+
+
 
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
