--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -160,8 +160,8 @@
         android:visibility="invisible"
         app:civ_border_color="#05df29"
         app:civ_border_width="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_lancerç_la_reponse"
-        app:layout_constraintStart_toEndOf="@+id/image_lancerç_la_reponse"
-        app:layout_constraintTop_toTopOf="@+id/image_lancerç_la_reponse" />
+        app:layout_constraintBottom_toBottomOf="@+id/cardview_nnotification"
+        app:layout_constraintStart_toEndOf="@+id/cardview_nnotification"
+        app:layout_constraintTop_toTopOf="@+id/cardview_nnotification" />
 
 </android.support.constraint.ConstraintLayout>
