--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -51,6 +51,8 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/righteous"
         android:text="empty "
+        android:textColor="@color/blanc"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
