--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
     <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/righteous</item>
         <item name="colorPrimary">@color/blanc</item>
-        <item name="android:colorAccent">@color/blanc</item>
+        <item name="colorAccent">@color/blanc</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
     <style name="edit_theme" parent="ThemeOverlay.AppCompat.Light">
