--- a/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
@@ -44,6 +44,7 @@
         android:textColor="@color/blanc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/show_message"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/show_message"
         app:layout_constraintTop_toBottomOf="@+id/show_message" />
     </android.support.constraint.ConstraintLayout>
