--- a/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
@@ -46,6 +46,7 @@
             android:fontFamily="@font/righteous"
             android:textColor="@color/blanc"
             app:layout_constraintEnd_toEndOf="@+id/show_message"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/show_message"
             app:layout_constraintTop_toBottomOf="@+id/show_message" />
 
