--- a/CommunityMarket/app/src/main/res/layout/fragment_decouvrir.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_decouvrir.xml
@@ -184,8 +184,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/textChausure"></android.support.v7.widget.RecyclerView>
 
 
-
-
                 <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adViewTwo"
                     android:layout_width="wrap_content"
@@ -193,11 +191,13 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:visibility="visible"
                     ads:adSize="BANNER"
                     ads:adUnitId="ca-app-pub-4353172129870258/3649563954"
+                    ads:layout_constraintBottom_toBottomOf="parent"
                     ads:layout_constraintEnd_toEndOf="parent"
                     ads:layout_constraintStart_toStartOf="parent"
                     ads:layout_constraintTop_toBottomOf="@+id/chaussureRecyclerView"></com.google.android.gms.ads.AdView>
