--- a/CommunityMarket/app/src/main/res/layout/fragment_jeux.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_jeux.xml
@@ -6,82 +6,91 @@
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Jeux_video.JeuxFragment">
-
-    <ViewFlipper
-        android:id="@+id/viewFlippertwo"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/fragment_slide_height"
-        android:autoStart="true"
-        android:flipInterval="4000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-
-        <ImageView
-            android:id="@+id/pubImage"
+        android:layout_height="wrap_content"
+        android:id="@+id/swip">
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/fragment_slide_height"
-            android:scaleType="centerCrop" />
+            android:layout_height="wrap_content">
+            <ViewFlipper
+                android:id="@+id/viewFlippertwo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fragment_slide_height"
+                android:autoStart="true"
+                android:flipInterval="4000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                >
+
+                <ImageView
+                    android:id="@+id/pubImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/fragment_slide_height"
+                    android:scaleType="centerCrop" />
 
 
-        <ImageView
-            android:id="@+id/pubImageTwo"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fragment_slide_height"
-            android:scaleType="centerCrop" />
+                <ImageView
+                    android:id="@+id/pubImageTwo"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/fragment_slide_height"
+                    android:scaleType="centerCrop" />
 
 
-        <ImageView
-            android:id="@+id/pubImageThree"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fragment_slide_height"
-            android:scaleType="centerCrop" />
+                <ImageView
+                    android:id="@+id/pubImageThree"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/fragment_slide_height"
+                    android:scaleType="centerCrop" />
 
 
-        <ImageView
-            android:id="@+id/pubImageFour"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fragment_slide_height"
-            android:scaleType="centerCrop" />
+                <ImageView
+                    android:id="@+id/pubImageFour"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/fragment_slide_height"
+                    android:scaleType="centerCrop" />
 
 
-    </ViewFlipper>
+            </ViewFlipper>
 
-    <TextView
-        android:id="@+id/imagePubText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
+            <TextView
+                android:id="@+id/imagePubText"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/pubImageTextTwo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
+            <TextView
+                android:id="@+id/pubImageTextTwo"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/pubImageTextThree"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
+            <TextView
+                android:id="@+id/pubImageTextThree"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/pubImageTextFour"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
+            <TextView
+                android:id="@+id/pubImageTextFour"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="invisible" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/jeuxRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo"
-        app:layout_constraintVertical_bias="1.0" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/jeuxRecyclerView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo"
+                app:layout_constraintVertical_bias="1.0" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </android.support.constraint.ConstraintLayout>
