--- a/CommunityMarket/app/src/main/res/layout/fragment_decouvrir.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_decouvrir.xml
@@ -162,12 +162,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/righteous"
                     android:textColor="@color/black"
                     android:textSize="17sp"
                     android:textStyle="bold"
+                    android:fontFamily="@font/righteous"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.031"
                     app:layout_constraintStart_toStartOf="parent"
@@ -178,14 +178,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="16dp"
                     android:padding="15dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textChausure"></android.support.v7.widget.RecyclerView>
 
 
+                <TextView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adViewTwo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="32dp"
+                    android:text=" "
+                    android:visibility="visible"
+                    ads:layout_constraintBottom_toBottomOf="parent"
+                    ads:layout_constraintEnd_toEndOf="parent"
+                    ads:layout_constraintStart_toStartOf="parent"
+                    ads:layout_constraintTop_toBottomOf="@+id/chaussureRecyclerView"></TextView>
                 my id ca-app-pub-4353172129870258/3649563954
                 pour eux id ca-app-pub-3940256099942544/6300978111
 
